# chemistry

./: .gitignore  README.md  chemistry.cabal  clearCharts.sh  stack.yaml
app/: Main.hs
charts/: charts.html
src/: Atom.hs  Atom.hs-boot  AtomEnergy.hs  Cache.hs  Dual.hs  Graphing.hs  Lib.hs  Orbital.hs  OrbitalShape.hs  Polynomial.hs  Utils.hs
