name:                chemistry
version:             0.1.0.0
homepage:            https://github.com/4Denthusiast/chemistry#readme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Dual,
                       Graphing,
                       Orbital,
                       Atom,
                       AtomEnergy,
                       Polynomial,
                       OrbitalShape,
                       Utils
  build-depends:       base >= 4.7 && < 5,
                       Chart,
                       Chart-diagrams,
                       containers,
                       floating-bits
  default-language:    Haskell2010

executable chemistry
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chemistry
  default-language:    Haskell2010

test-suite chemistry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chemistry
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/4Denthusiast/chemistry
